# MuscleMap

./: .gitignore  pyproject.toml  requirements.txt  setup.py
examples/: dataset.json  train_metadata_mock.json
muscle_map/: mm_extract_metrics.py  mm_register_to_template.py  mm_segment.py  mm_train.py  mm_util.py  model_config_default.json
src/: mm_segment.py  mm_train.py
