[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muscle_map"
version = "2.0"
description = "A toolbox for muscle imaging."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Kenneth Weber" },
  { name = "Eddo Wesselink" },
  { name = "Benjamin DeLeener" },
  { name = "Brian Kim" },
  { name = "Richard Yin" },
  { name = "Steffen Bollmann" }
]
dependencies = [
  "monai>=1.3",
  "torch>=2.4",
  "numpy>=1.24",
  "nibabel>=5.2",
  "scikit-learn>=1.3",
  "pandas>=2.0",
  "scikit-image>=0.21",
  "transforms3d>=0.4",
  "tqdm>=4.67",
  "matplotlib>=3.9",
  "psutil>=6.1",
  "portalocker>=3.1",
  "customtkinter>=5.2",
  "Pillow>=11.3"
]

[project.urls]
Homepage = "https://github.com/Palpatineli/MuscleMap.git"

[project.scripts]
mm_segment = "muscle_map.mm_segment:main"
mm_train = "muscle_map.mm_train:main"
mm_extract_metrics = "muscle_map.mm_extract_metrics:main"
mm_gui = "muscle_map.mm_gui:main"
mm_register_to_template = "muscle_map.mm_register_to_template:main"

[tool.setuptools]
packages = ["muscle_map"]

[tool.setuptools.package-data]
muscle_map = ["py.typed"]
